# PolySniff

./: .cursorignore  .gitignore  README.md  main.py  pyproject.toml
polysniff/: __init__.py
polysniff/backtest/: __init__.py  runner.py  simulator.py
polysniff/config/: __init__.py  logging.py  settings.py
polysniff/execution/: __init__.py  risk_manager.py  trader.py
polysniff/model/: __init__.py  feature_extractor.py  probability_engine.py
polysniff/storage/: __init__.py  db.py  models.py
polysniff/strategy/: __init__.py  ev_calculator.py
polysniff/utils/: __init__.py  math.py  time.py
scripts/: README.md  filter_markets.py  get_api_keys.py  markets_sample.json  test_api.py  test_model.py
